--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -70,6 +70,8 @@
             // Las urls se guardan en items de una lista oculta
             $("#initial-pictures-urls").find("li").each(function(index, item){
                 var url = $(item).text();
+                var id = $(item).attr('id');
+                galleryArray[url]=id;
                 addGalleryPicture(url);
             });
         }
@@ -126,7 +128,6 @@
                 $gallery.find(".gallery-item").click(function (e) {
                     var url = $(this).find("img").attr("src");
                     var id = galleryArray[url];
-                    associationStepPicture[stepIndex] = id;
 
                     var $control = stepPicture.children(".step-picture-add");
                     var $pic = stepPicture.children("img");
@@ -134,32 +135,15 @@
                     $pic.attr("src", url);
                     //$pic.attr("data-picture-id", id);
                     $pic.show();
+
+                    var $id = stepPicture.children("input");
+                    $id.attr("value", id);
                     $control.hide();
 
                     $modal.modal("hide");
                 });
             });
 
-        });
-    </script>
-    <script>
-        $().ready(function () {
-            $("#recipe-form").submit(function (e) {
-                var $form = $(this);
-
-                // Recoge las asociaciones paso-foto
-                $.each(associationStepPicture, function(index, value){
-                    var inputIndex = $("<input>")
-                       .attr("type", "hidden")
-                       .attr("name", "step-picture-index_"+index).val(index);
-                    var inputValue = $("<input>")
-                       .attr("type", "hidden")
-                       .attr("name", "step-picture-id_"+index).val(value);
-
-                    $form.append(inputIndex);
-                    $form.append(inputValue);
-                });
-            });
         });
     </script>
 {% endblock %}
@@ -215,7 +199,7 @@
             <ul id="initial-pictures-urls" style="display: none">
                 {% for pic_id in form.get_pictures_ids_list %}
                     {% if pic_id %}
-                        <li>{% picture_from_id pic_id %}</li>
+                        <li id="{{ pic_id }}">{% picture_from_id pic_id %}</li>
                     {% endif %}
                 {% endfor %}
             </ul>
@@ -334,6 +318,7 @@
                                         class="glyphicon glyphicon-camera"></span></a>
                                 <img class="img-rounded"
                                      src="" style="display: none">
+                                <input type="text" hidden name="step-picture-id_{row-count-placeholder}">
                             </div>
                         </div>
                         <hr>
@@ -353,11 +338,19 @@
                                               name="step_{{ forloop.counter0 }}" id="id_step_{{ forloop.counter0 }}"
                                             >{{ step }}</textarea>
                                 </div>
-                                <div class="col-sm-2 step-picture" data-step-index="{row-count-placeholder}">
-                                    <a class="btn btn-default step-picture-add"><span
+                                <div class="col-sm-2 step-picture" data-step-index="{{ forloop.counter0 }}">
+                                    <input type="text" hidden name="step-picture-id_{{ forloop.counter0 }}" value="{% step_picture form.data forloop.counter0 %}">
+                                    {% if stepimageid %}
+                                        <a class="btn btn-default step-picture-add" style="display: none"><span
                                             class="glyphicon glyphicon-camera"></span></a>
-                                    <img class="img-rounded"
-                                         src="" style="display: none">
+                                        <img class="img-rounded"
+                                             src="{% picture_from_id stepimageid %}">
+                                    {% else %}
+                                        <a class="btn btn-default step-picture-add"><span
+                                            class="glyphicon glyphicon-camera"></span></a>
+                                        <img class="img-rounded"
+                                                 src="" style="display: none">
+                                    {% endif %}
                                 </div>
                             </div>
                             <hr>
