Añadidos botones para editar y eliminar receta
Sólo si el usuario logueado es el autor de la receta, o es un administrador.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -931,6 +931,10 @@ font-weight: bold;
     color: #656565;
 }
 
+.recipe-controls {
+    margin-bottom: 20px;
+}
+
 .post-it-right {
     background: #fefabc;
     padding: 15px;
