--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -80,6 +80,17 @@
         </div>
     </div>
 
+    {% if user == receta.author or user.is_staff %}
+        <div class="row panel-body recipe-controls">
+            <div class="col-md-4 col-md-offset-1">
+                <a href="#" class="btn btn-default btn-block btn-danger">Editar receta</a>
+            </div>
+            <div class="col-md-4 col-md-offset-2">
+                <a href="#" class="btn btn-default btn-block btn-danger">Eliminar receta</a>
+            </div>
+        </div>
+    {% endif %}
+
     <div class="panel panel-body row recipe-description">
         <p class="text-soft"> {{ receta.description }} </p>
     </div>
