--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -47,6 +47,12 @@
             </a>
         </div>
 
+        <!-- Fork overlay -->
+        <div class="recipe-fork">
+            <a href="#" class="btn btn-default recipe-fork-count"><i class="fa fa-code-fork"></i> 5</a>
+            {% if user.is_authenticated %}<a href="#" class="btn btn-default recipe-fork-clone">Clone</a>{% endif %}
+        </div>
+
         <!-- Author overlay -->
         <a class="recipe-author-link" href="{% url 'profile' receta.author.username %}">
             <img class="img-circle recipe-author recipe-author-picture"
@@ -83,10 +89,10 @@
     {% if user == receta.author or user.is_staff %}
         <div class="row panel-body recipe-controls">
             <div class="col-md-4 col-md-offset-1">
-                <a href="#" class="btn btn-default btn-block btn-danger">Editar receta</a>
+                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-edit"></i> Editar receta</a>
             </div>
             <div class="col-md-4 col-md-offset-2">
-                <a href="#" class="btn btn-default btn-block btn-danger">Eliminar receta</a>
+                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-trash-o"></i> Eliminar receta</a>
             </div>
         </div>
     {% endif %}
