Arreglado estilos erróneamente eliminados de steps.
Eliminé por error unos estilos que se usan en el formulario de creación de receta. Los vuelvo a colocar.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -319,6 +319,21 @@ header .container {
     border-radius: 6px;
 }
 
+.step span {
+    font-size: 50px;
+    color: #CC3E27;
+}
+
+.step.next span {
+    font-size: 50px;
+    color: #ccc4bc;
+}
+
+.step img {
+    height: auto;
+    width: 100%;
+}
+
 .savours-help {
     font-size: 18px;
     font-style: italic;
