--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -50,7 +50,7 @@
         <!-- Fork overlay -->
         <div class="recipe-fork">
             <a href="#" class="btn btn-default recipe-fork-count"><i class="fa fa-code-fork"></i> 5</a>
-            {% if user.is_authenticated %}<a href="#" class="btn btn-default recipe-fork-clone">Clone</a>{% endif %}
+            {% if user.is_authenticated %}<a href="#" class="btn btn-default recipe-fork-clone">{% trans "Clone" %}</a>{% endif %}
         </div>
 
         <!-- Author overlay -->
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="recipe-votes-buttons">
-                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-up"></i> Like</a>
+                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-up"></i> {% trans "Like" %}</a>
                     <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-down"></i></a>
                 </div>
             </div>
@@ -89,10 +89,10 @@
     {% if user == receta.author or user.is_staff %}
         <div class="row panel-body recipe-controls">
             <div class="col-md-4 col-md-offset-1">
-                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-edit"></i> Editar receta</a>
+                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-edit"></i> {% trans "Edit recipe" %}</a>
             </div>
             <div class="col-md-4 col-md-offset-2">
-                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-trash-o"></i> Eliminar receta</a>
+                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-trash-o"></i> {% trans "Delete recipe" %}</a>
             </div>
         </div>
     {% endif %}
@@ -105,31 +105,31 @@
         <div class="col-md-4 recipe-data">
             {% if receta.time.prep_time and receta.time.cook_time %}
                 <p>{{ recipe.time.prep_time }} + {{ recipe.time.cook_time }} min</p>
-                <p class="recipe-data-secondary">prep + cook time</p>
+                <p class="recipe-data-secondary">{% trans "prep + cook time" %}</p>
             {% elif receta.time.prep_time %}
-                <p>{{ receta.time.prep_time }} min</p>
-                <p class="recipe-data-secondary">prep time</p>
+                <p>{{ receta.time.prep_time }} {% trans "min" %}</p>
+                <p class="recipe-data-secondary">{% trans "prep time" %}</p>
             {% elif receta.time.cook_time %}
-                <p>{{ receta.time.cook_time }} min</p>
-                <p class="recipe-data-secondary">prep time</p>
+                <p>{{ receta.time.cook_time }} {% trans "min" %}</p>
+                <p class="recipe-data-secondary">{% trans "prep time" %}</p>
             {% endif %}
         </div>
         <div class="col-md-4 recipe-data">
             <p>{{ difficult_value }}</p>
 
-            <p class="recipe-data-secondary">difficulty</p>
+            <p class="recipe-data-secondary">{% trans "difficulty" %}</p>
         </div>
         <div class="col-md-4 recipe-data">
             <p>{{ receta.serves }}</p>
 
-            <p class="recipe-data-secondary">serves</p>
+            <p class="recipe-data-secondary">{% trans "serves" %}</p>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-6 recipe-ingredients-parent {% if not receta.notes %}col-md-offset-3{% endif %}">
             <div class="panel-body recipe-ingredients post-it-left">
-                <h3 class="recipe-panel-title">Ingredients</h3>
+                <h3 class="recipe-panel-title">{% trans "Ingredients" %}</h3>
                 <ul>
                     {% for ingredient in receta.ingredients %}
                         <li>{{ ingredient }}</li>
@@ -139,7 +139,7 @@
         </div>
         <div class="col-md-6 recipe-notes-parent">
             <div class="panel-body recipe-notes postit">
-                <h3 class="recipe-panel-title">Notes</h3>
+                <h3 class="recipe-panel-title">{% trans "Notes" %}</h3>
 
                 <p>{{ receta.notes }}</p>
             </div>
@@ -173,29 +173,29 @@
     <div class="row">
         <div class="col-md-6 recipe-more-parent">
             <div class="panel panel-body recipe-more">
-                <h3 class="recipe-panel-title">More information</h3>
+                <h3 class="recipe-panel-title">{% trans "More information" %}</h3>
 
                 {% if receta.temporality %}
-                    <div class="recipe-more-title">Occasions:</div>
+                    <div class="recipe-more-title">{% trans "Occasions" %}:</div>
                     {% for occasion in receta.temporality %}
                         <span><a class="recipe-tag" href="#">{{ occasion }}</a></span>
                     {% endfor %}
                 {% endif %}
 
                 {% if receta.food_type %}
-                    <div class="recipe-more-title">Food Type:</div>
+                    <div class="recipe-more-title">{% trans "Food Type" %}:</div>
                     <span><a class="recipe-tag" href="#">{{ receta.food_type }}</a></span>
                 {% endif %}
 
                 {% if receta.special_conditions %}
-                    <div class="recipe-more-title">Suitable for:</div>
+                    <div class="recipe-more-title">{% trans "Suitable for" %}:</div>
                     {% for condition in receta.special_conditions %}
                         <span><a class="recipe-tag" href="#">{{ condition }}</a></span>
                     {% endfor %}
                 {% endif %}
 
                 {% if receta.tags %}
-                    <div class="recipe-more-title">Tags:</div>
+                    <div class="recipe-more-title">{% trans "Tags" %}:</div>
                     {% for tag in receta.tags %}
                         <span><a class="recipe-tag" href="#">{{ tag }}</a></span>
                     {% endfor %}
@@ -206,11 +206,11 @@
         </div>
         <div class="col-md-6 recipe-tastes-parent">
             <div class="panel panel-body recipe-tastes">
-                <h3 class="recipe-panel-title">Savours</h3>
+                <h3 class="recipe-panel-title">{% trans "Savours" %}</h3>
 
                 <div class="recipe-tastes-list">
                     <div class="recipe-taste">
-                        <span>Salty</span>
+                        <span>{% trans "Salty" %}</span>
 
                         <div class="progress">
                             <div class="progress-bar" id="salty" role="progressbar" aria-valuenow="60"
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     <div class="recipe-taste">
-                        <span>Sour</span>
+                        <span>{% trans "Sour" %}</span>
 
                         <div class="progress">
                             <div class="progress-bar" id="sour" role="progressbar" aria-valuenow="80"
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                     <div class="recipe-taste">
-                        <span>Bitter</span>
+                        <span>{% trans "Bitter" %}</span>
 
                         <div class="progress">
                             <div class="progress-bar" id="bitter" role="progressbar" aria-valuenow="60"
@@ -240,7 +240,7 @@
                         </div>
                     </div>
                     <div class="recipe-taste">
-                        <span>Sweet</span>
+                        <span>{% trans "Sweet" %}</span>
 
                         <div class="progress">
                             <div class="progress-bar" id="sweet" role="progressbar" aria-valuenow="60"
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                     <div class="recipe-taste">
-                        <span>Spicy</span>
+                        <span>{% trans "Spicy" %}</span>
 
                         <div class="progress">
                             <div class="progress-bar" id="spicy" role="progressbar" aria-valuenow="60"
@@ -265,7 +265,7 @@
     </div>
 
     <div class="row panel panel-body">
-        <h3 class="recipe-panel-title">Comments</h3>
+        <h3 class="recipe-panel-title">{% trans "Comments" %}</h3>
 
         <div class="recipe-comment-list">
             {% if receta.comments %}
@@ -283,13 +283,13 @@
                             {% if user.is_staff %}
                                 {% if comment.is_banned %}
                                     <a href="{% url 'unbanned' receta.id forloop.counter0 %}"
-                                       class="plus btn btn-default">Unbanned Comment</a>
+                                       class="plus btn btn-default">{% trans "Unbanned Comment" %}</a>
                                 {% else %}
                                     <a href="{% url 'banned' receta.id forloop.counter0 %}"
-                                       class="plus btn btn-default">Ban comment</a>
+                                       class="plus btn btn-default">{% trans "Ban comment" %}</a>
                                 {% endif %}
                             {% elif comment.user_own == user and comment.is_banned %}
-                                <div class="alert alert-danger">This comment has been banned.</div>
+                                <div class="alert alert-danger">{% trans "This comment has been banned." %}</div>
                             {% endif %}
                         </div>
                         <hr>
@@ -297,7 +297,7 @@
                 {% endfor %}
             {% else %}
                 <div class="recipe-comment-empty">
-                    <p class="text-soft">No comments yet. Be the first!</p>
+                    <p class="text-soft">{% trans "No comments yet. Be the first!" %}</p>
                 </div>
             {% endif %}
 
@@ -308,12 +308,12 @@
 
                     <form method="POST" action="{% url 'comment' receta.id %}">
                         <textarea class="form-control" name="text"
-                                  placeholder="Escribe un comentario sobre la receta…" rows="5"></textarea>
-                        <input class="plus btn btn-default" type="submit">
+                                  placeholder="{% trans "Write a comment about the recipe…" %}" rows="5"></textarea>
+                        <input class="plus btn btn-default" type="submit" value="{% trans "Send" %}">
                     </form>
                 </div>
             {% else %}
-                <div class="recipe-comment-login text-soft">Want to comment? <a
+                <div class="recipe-comment-login text-soft">{% trans "Want to comment?" %} <a
                         href="{% url 'login' %}">Log in</a> first.
                 </div>
             {% endif %}
