--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -50,7 +50,8 @@
         <!-- Fork overlay -->
         <div class="recipe-fork">
             <a href="#" class="btn btn-default recipe-fork-count"><i class="fa fa-code-fork"></i> 5</a>
-            {% if user.is_authenticated %}<a href="#" class="btn btn-default recipe-fork-clone">{% trans "Clone" %}</a>{% endif %}
+            {% if user.is_authenticated %}<a href="#" class="btn btn-default recipe-fork-clone">{% trans "Clone" %}
+                </a>{% endif %}
         </div>
 
         <!-- Author overlay -->
@@ -79,7 +80,8 @@
                 </div>
 
                 <div class="recipe-votes-buttons">
-                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-up"></i> {% trans "Like" %}</a>
+                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-up"></i> {% trans "Like" %}
+                    </a>
                     <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-down"></i></a>
                 </div>
             </div>
@@ -89,10 +91,12 @@
     {% if user == receta.author or user.is_staff %}
         <div class="row panel-body recipe-controls">
             <div class="col-md-4 col-md-offset-1">
-                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-edit"></i> {% trans "Edit recipe" %}</a>
+                <a href="#" class="btn btn-default btn-block btn-danger"><i
+                        class="fa fa-edit"></i> {% trans "Edit recipe" %}</a>
             </div>
             <div class="col-md-4 col-md-offset-2">
-                <a href="#" class="btn btn-default btn-block btn-danger"><i class="fa fa-trash-o"></i> {% trans "Delete recipe" %}</a>
+                <a href="#" class="btn btn-default btn-block btn-danger"><i
+                        class="fa fa-trash-o"></i> {% trans "Delete recipe" %}</a>
             </div>
         </div>
     {% endif %}
@@ -137,13 +141,16 @@
                 </ul>
             </div>
         </div>
-        <div class="col-md-6 recipe-notes-parent">
-            <div class="panel-body recipe-notes postit">
-                <h3 class="recipe-panel-title">{% trans "Notes" %}</h3>
 
-                <p>{{ receta.notes }}</p>
+        {% if receta.notes %}
+            <div class="col-md-6 recipe-notes-parent">
+                <div class="panel-body recipe-notes postit">
+                    <h3 class="recipe-panel-title">{% trans "Notes" %}</h3>
+
+                    <p>{{ receta.notes }}</p>
+                </div>
             </div>
-        </div>
+        {% endif %}
     </div>
 
     <div class="recipe-step-list">
