--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -22,6 +22,7 @@
 <body>
 <header>
     {% block navbar %}
+        {% load tags %}
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -39,9 +40,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{% url 'main' %}">{% trans "Home" %}</a></li>
-                        <li><a href="#">{% trans "Recipes" %}</a></li>
-                        <li><a href="#">{% trans "Explore" %}</a></li>
+                        <li class="{% navactive request 'main' %}"><a href="{% url 'main' %}">{% trans "Home" %}</a></li>
+                        <li><a class="" href="#">{% trans "Recipes" %}</a></li>
+                        <li><a class="" href="#">{% trans "Explore" %}</a></li>
                         <li class="divider-vertical"></li>
                     </ul>
 
