--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -50,7 +50,7 @@
         <!-- Fork overlay -->
         <div class="recipe-fork">
             <a href="#" class="btn btn-default recipe-fork-count"><i class="fa fa-code-fork"></i> 5</a>
-            {% if user.is_authenticated %}<a href="#" class="btn btn-default recipe-fork-clone">{% trans "Clone" %}
+            {% if user.is_authenticated %}<a href="{% url 'clonerecipe' receta.id %}" class="btn btn-default recipe-fork-clone">{% trans "Clone" %}
                 </a>{% endif %}
         </div>
 
@@ -91,7 +91,7 @@
     {% if user == receta.author or user.is_staff %}
         <div class="row panel-body recipe-controls">
             <div class="col-md-4 col-md-offset-1">
-                <a href="#" class="btn btn-default btn-block btn-danger"><i
+                <a href="{% url 'editrecipe' receta.id %}" class="btn btn-default btn-block btn-danger"><i
                         class="fa fa-edit"></i> {% trans "Edit recipe" %}</a>
             </div>
             <div class="col-md-4 col-md-offset-2">
