--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -66,23 +66,22 @@
             <div class="recipe-votes">
                 <div class="recipe-votes-indicators">
                     <span class="recipe-votes-indicator"><i
-                            class="fa fa-thumbs-up"></i>{{ receta.positives|length }}</span>
+                            class="fa fa-thumbs-up"></i><span id="positive_votes">{{ receta.positives|length }}</span></span>
                         <span class="recipe-votes-indicator"><i
-                                class="fa fa-thumbs-down"></i>{{ receta.negatives|length }}</span>
-                    <span class="recipe-votes-count">{{ total_votos }}</span>
+                                class="fa fa-thumbs-down"></i><span id="negative_votes">{{ receta.negatives|length }}</span></span>
+                    <span id="recipe-votes-count" class="recipe-votes-count">{{ total_votos }}</span>
                 </div>
 
                 <div class="progress recipe-votes-progress">
-                    <div class="progress-bar progress-bar-success" style="width: {{ por_pos }}%">
+                    <div id="por_pos" class="progress-bar progress-bar-success" style="width: {{ por_pos }}%">
                     </div>
-                    <div class="progress-bar progress-bar-warning" style="width: {{ por_neg }}%">
+                    <div id="por_neg" class="progress-bar progress-bar-warning" style="width: {{ por_neg }}%">
                     </div>
                 </div>
 
                 <div class="recipe-votes-buttons">
-                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-up"></i> {% trans "Like" %}
-                    </a>
-                    <a class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-down"></i></a>
+                    <a id="btn-positive" class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-up"></i> {% trans "Like" %}</a>
+                    <a id="btn-negative" class="btn btn-default recipe-votes-like-btn"><i class="fa fa-thumbs-down"></i></a>
                 </div>
             </div>
         </div>
@@ -335,6 +334,34 @@
 
 {% block custom_js %}
     <script>
+        var $positive = $("#btn-positive");
+        var $negative = $("#btn-negative");
+        var $positive_votes = $("#positive_votes")
+        var $negative_votes = $("#negative_votes")
+        var $total_count = $("#recipe-votes-count");
+        var $error = $("#error-vote");
+        var $ok = $("#ok-vote");
+        var $por_pos = $("#por_pos");
+        var $por_neg = $("#por_neg");
+
+        function show_error(jqXHR, textStatus, errorThrown) {
+            var result = $.parseJSON(jqXHR.responseText);
+            // TODO: Mostrar mensaje de error
+        }
+
+        function vote_refresh (jqXHR, textStatus, errorThrown) {
+            //actualizar conteo de votos sin necesidad de recargar la pagina
+            $.get('{% url 'recipe_votes' receta.id %}', function (data) {
+                var result = $.parseJSON(data);
+                console.log(data);
+                $positive_votes.html(result.positives);
+                $negative_votes.html(result.negatives);
+                $total_count.html(result.total);
+                $por_pos.css( "width", result.por_pos + '%' );
+                $por_neg.css( "width", result.por_neg + '%' );
+            })
+        }
+
         var csrftoken = getCookie('csrftoken');
 
         // establecer valores por defecto utilizados en las peticiones ajax
@@ -350,12 +377,6 @@
 
         // funcion a ejecutar cuando el DOM este completamente cargado
         $(document).ready(function () {
-            var $positive = $("#btn-positive");
-            var $negative = $("#btn-negative");
-            var $positive_votes = $("#positive_votes")
-            var $negative_votes = $("#negative_votes")
-            var $error = $("#error-vote");
-            var $ok = $("#ok-vote");
 
             // por defecto los divs para indicar el resultado estan ocultos
             $error.hide();
@@ -370,35 +391,10 @@
                     url: '{% url 'vote' %}',
                     data: data,
                     dataType: "json",
-
                     // funcion ejecutada cuando la peticion haya tenido exito
-                    success: function (jqXHR, textStatus, errorThrown) {
-                        $error.hide();
-
-                        $ok.show();
-
-                        //actualizar conteo de votos sin necesidad de recargar la pagina
-                        $.get('{% url 'recipe_votes' receta.id %}', function (data) {
-                            var result = $.parseJSON(data);
-
-                            console.log("votos tras la votacion\n +: " + result.positives + "\n -: " + result.negatives);
-                            $positive_votes.html(result.positives)
-                            $negative_votes.html(result.negatives)
-
-                            //$positive.attr("disabled", true);
-                            //$negative.attr("disabled", true);
-                        })
-                    },
-
+                    success: vote_refresh,
                     // funcion ejecutada cuando se haya producido algun error
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        var result = $.parseJSON(jqXHR.responseText);
-
-                        $error.find("span").html(result.message);
-                        $error.show();
-
-                        $ok.hide();
-                    }
+                    error: show_error
                 })
             });
 
@@ -410,37 +406,9 @@
                     url: '{% url 'vote' %}',
                     data: data,
                     dataType: "json",
-                    success: function (jqXHR, textStatus, errorThrown) {
+                    success: vote_refresh,
 
-                        var $error = $("#error-vote");
-                        $error.hide();
-
-                        var $ok = $("#ok-vote");
-                        $ok.show();
-
-                        //actualizar conteo de votos sin necesidad de recargar la pagina
-                        $.get('{% url 'recipe_votes' receta.id %}', function (data) {
-                            var result = $.parseJSON(data);
-
-                            console.log("votos tras la votacion\n +: " + result.positives + "\n -: " + result.negatives);
-                            $positive_votes.html(result.positives)
-                            $negative_votes.html(result.negatives)
-
-                            //$positive.attr("disabled", true);
-                            //$negative.attr("disabled", true);
-                        })
-                    },
-
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        var result = $.parseJSON(jqXHR.responseText);
-
-                        var $error = $("#error-vote");
-                        $error.find("span").html(result.message);
-                        $error.show();
-
-                        var $ok = $("#ok-vote");
-                        $ok.hide();
-                    }
+                    error: show_error
                 })
             })
         });
