--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -3,47 +3,42 @@
 {% load i18n %}
 
 {% block container %}
-	
-	<div class="row">
-		{% for recipe in recipes %}
-      <div class="col-sm-6 col-md-4">
-        <div class="thumbnail main-card">
-			<br />
-            <a href="{% url 'recipe' recipe.id %}">
-                <img data-src="holder.js/300x200" alt="300x200" src="{{ recipe.main_image.url }}" style="width: 300px; height: 200px;">
-            </a>
-            <div class="caption">
-            <div class="recipe-name">
-				<a class="recipe-title" href="{% url 'recipe' recipe.id %}">{{ recipe.title }}</a>
-            </div>
-			<div class="description-recipe-main fix-main-card-description">
-				<p>{{ recipe.description }}</p>
-			</div>
-			<div class="caption">
-				<div class="recipe-time">
-					<span class="glyphicon glyphicon-time"></span>
 
-					<p>
-						{{ recipe.time.prep_time }}
-					</p>
-				</div>
-				<div class="recipe-author-main">
-					<h5>by</h5>
-					<span><a class="recipe-link-main" href="{% url 'profile' recipe.author.username %}">{{ recipe.author.profile.get.display_name }}</a></span>
-				</div>
-			</div>
-			<br />
-			<br />
-          </div>
-        </div>
-      </div>
-	  {% endfor %}
-	</div>
-	
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
+    <div class="row">
+        {% for recipe in recipes %}
+            <div class="col-sm-6 col-md-4">
+                <div class="panel panel-body main-card">
+                    <div class="main-card-picture">
+                        <a href="{% url 'recipe' recipe.id %}">
+                            <img src="{{ recipe.main_image.url }}" style="width: 100%; height: 200px;">
+                        </a>
+                    </div>
+                    <div class="main-card-name">
+                        <a class="recipe-title" href="{% url 'recipe' recipe.id %}"><span>{{ recipe.title }}</span></a>
+                    </div>
+
+                    <div class="main-card-description">
+                        {{ recipe.description }}
+                    </div>
+                    <div class="recipe-time">
+                        <span class="glyphicon glyphicon-time"></span>
+                        <span>{{ recipe.time.prep_time }}</span>
+                    </div>
+                    <div class="recipe-author-main">
+                                <span><a class="recipe-link-main"
+                                         href="{% url 'profile' recipe.author.username %}">by {{ recipe.author.profile.get.display_name }}</a></span>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+{% endblock %}
+
 {% endblock %}
