Elipsis en la descripción de la pantalla principal
Añadida librería dotdotdot para poner elipsis en la descripción de las tarjetas en la pantalla principal.

--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -41,4 +41,11 @@
     <br/>
 {% endblock %}
 
+{% block custom_js %}
+    <script src="{% static 'webapp/js/jquery.dotdotdot.min.js' %}"></script>
+    <script>
+        $().ready(function () {
+            $(".main-card-description").dotdotdot();
+        });
+    </script>
 {% endblock %}
