Corregido aspect-ratio de las imágenes en la pantalla principal
Utiliza el background de css para mostrar las imágenes de forma que rellenen su cuadro de tamaño fijo, pero manteniendo el aspect-ratio original para que no se descuadren.
Mantiene por encima un <img> con opacidad nula (invisible pero presente), para que funcione el enlace y se pueda interactura con la imagen mediante botón derecho.

Aw yeah!

--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -8,9 +8,9 @@
         {% for recipe in recipes %}
             <div class="col-sm-6 col-md-4">
                 <div class="panel panel-body main-card">
-                    <div class="main-card-picture">
+                    <div class="main-card-picture" style="background-image: url('{{ recipe.main_image.url }}')">
                         <a href="{% url 'recipe' recipe.id %}">
-                            <img src="{{ recipe.main_image.url }}" style="width: 100%; height: 200px;">
+                            <img src="{{ recipe.main_image.url }}" style="width: 100%; height: 100%; opacity: 0">
                         </a>
                     </div>
                     <div class="main-card-name">
