--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -609,6 +609,10 @@ header .container {
 
 .main-card-picture {
     margin-bottom: 10px;
+    width: 100%;
+    height: 200px;
+    background-position: center;
+    background-size: cover;
 }
 
 .main-card-name {
