--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -770,14 +770,24 @@ header .container {
     color: #fff;
 }
 
-.recipe-author-picture {
-    float: right;
+.recipe-author-picture-container {
     z-index: 10;
-    width: 80px;
-    margin: 2px;
-    background-color: #fff;
     padding: 4px;
+    margin: 2px;
+}
 
+.recipe-author-picture {
+    width: 80px;
+    height: 80px;
+    background-position: center;
+    background-size: cover;
+    background-origin: content-box;
+}
+
+.recipe-author-picture img {
+    opacity: 0;
+    max-width: 80px;
+    max-height: 80px;
 }
 
 .recipe-author-name {
