Corregido tiempo de preparación + cocina no se muestran cuando van juntos en la vista de receta.

--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -112,7 +112,7 @@
     <div class="panel panel-body row">
         <div class="col-md-4 recipe-data">
             {% if receta.time.prep_time and receta.time.cook_time %}
-                <p>{{ recipe.time.prep_time }} + {{ recipe.time.cook_time }} min</p>
+                <p>{{ receta.time.prep_time }} + {{ receta.time.cook_time }} min</p>
                 <p class="recipe-data-secondary">{% trans "prep + cook time" %}</p>
             {% elif receta.time.prep_time %}
                 <p>{{ receta.time.prep_time }} {% trans "min" %}</p>
