Corregida vista de lista simple de recetas.
Corregido indicador de tiempo en la lista simple de recetas
Corregida imagen incorrecta por no haber refactorizado el método para acceder a la url.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -141,6 +141,11 @@ header .container {
     font-size: 20px;
 }
 
+.recipe-list-time {
+    color: #CC3E27;
+    font-size: 18px;
+}
+
 
 .recipe-image {
     padding: 30px;
