--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -96,11 +96,11 @@
         <div class="row panel-body recipe-controls">
             <div class="col-md-4 col-md-offset-1">
                 <a href="{% url 'editrecipe' receta.id %}" class="btn btn-default btn-block btn-danger"><i
-                        class="fa fa-edit"></i> {% trans "Edit recipe" %}</a>
+                        class="fa fa-edit"></i> {% trans "Edit recipe" %} </a>
             </div>
             <div class="col-md-4 col-md-offset-2">
                 <a href="#" class="btn btn-default btn-block btn-danger"><i
-                        class="fa fa-trash-o"></i> {% trans "Delete recipe" %}</a>
+                        class="fa fa-trash-o"></i> {% trans "Delete recipe" %} </a>
             </div>
         </div>
     {% endif %}
@@ -326,7 +326,7 @@
                 </div>
             {% else %}
                 <div class="recipe-comment-login text-soft">{% trans "Want to comment?" %} <a
-                        href="{% url 'login' %}">Log in</a> first.
+                        href="{% url 'login' %}">{% trans "Log in" %}</a> {% trans "first" %}.
                 </div>
             {% endif %}
 
