--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -256,7 +256,7 @@
                         <div class="progress">
                             <div class="progress-bar" id="sweet" role="progressbar" aria-valuenow="60"
                                  aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 90%;">
+                                 aria-valuemax="100" style="width: {{ receta.savours.sweet }}%;">
                             </div>
                         </div>
                     </div>
